portal-console-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-console
spec:
  ports:
    - port: 8080
  selector:
    tier: portal-console
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-console
spec:
  selector:
    matchLabels:
      tier: portal-console
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: portal-console
    spec:
      containers:
      - image: eugeniosant/portal-console:7.1.1.0
        name: portal-console
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: portal-console
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    EntandoApp: quickstart
  name: portal-console-ingress
spec:
  rules:
  - host: 10-219-168-145.nip.io
    http:
      paths:
      - backend:
          service:
            name: portal-console
            port:
              number: 8080
        path: /portal-console
        pathType: Prefix
